kubernetes/apps/default/immich/app/proxy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.observability.svc.cluster.local
  ports:
    - port: 8080
