kubernetes/apps/default/immich/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-route
spec:
  parentRefs:
    - name: envoy-tailscale
      namespace: network
  hostnames:
    - memories.harissaeed.com
  rules:
    - backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: observability
          port: 8080
